--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   carousel_slider: ^5.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  readmore: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,9 @@ flutter:
   assets:
     - assets/cinema/
     - assets/coffee/
+    - assets/food-delivery/product/
+    - assets/food-delivery/
+    - assets/food-delivery/icon/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
