--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   hive_flutter: ^1.1.0
   readmore: ^3.0.0
   flutter_rating_bar: ^4.0.1
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
