--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   syncfusion_flutter_charts: ^27.1.55
   swipeable_button_view: ^0.0.2
   google_fonts: ^6.2.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -87,6 +88,7 @@ flutter:
     - assets/plant-shop/
     - assets/food-recipe/
     - assets/banking-app/
+    - assets/doctor-appoinment/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
