--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,9 @@ dependencies:
   syncfusion_flutter_charts: ^27.1.55
   swipeable_button_view: ^0.0.2
   google_fonts: ^6.2.1
-  equatable: ^2.0.5
+  provider: ^6.1.2
+  dotted_line: ^3.2.3
+  animate_do: ^3.3.4
 
 dev_dependencies:
   flutter_test:
@@ -89,6 +91,9 @@ flutter:
     - assets/food-recipe/
     - assets/banking-app/
     - assets/doctor-appoinment/
+    - assets/food-delivery(foodel)/
+    - assets/food-delivery(foodel)/ramen/
+    - assets/food-delivery(foodel)/burger/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
