--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   fl_chart: ^0.69.0
   flutter_cached_pdfview: ^0.4.3
   gap: ^3.0.1
+  file_picker: ^8.1.4
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -101,6 +103,7 @@ flutter:
     - assets/dashoboard/
     - assets/pdf/
     - assets/coffee-shop/
+    - assets/fashion/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
