trackizer finance management app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   gap: ^3.0.1
   file_picker: ^8.1.4
   flutter_spinkit: ^5.2.1
+  dotted_border: ^2.1.0
+  card_swiper: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -106,6 +108,7 @@ flutter:
     - assets/fashion/
     - assets/fashion/category_image/
     - assets/fashion/category_image/sub_category/
+    - assets/img/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
