--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   card_swiper: ^3.0.1
   syncfusion_flutter_gauges: ^27.2.5
   ionicons: ^0.2.2
+  flutter_iconly: ^1.0.2
+  badges: ^3.1.2
+  easy_stepper: ^0.8.5+1
 
 dev_dependencies:
   flutter_test:
@@ -113,6 +116,7 @@ flutter:
     - assets/img/
     - assets/health/
     - assets/educational-app/
+    - assets/agriplant/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
